# SaltoCli

./: README.md  main.cpp  meson.build
src/: Console.cpp  Console.h  SaltoCli.cpp  SaltoCli.h  main.cpp  meson.build
test/: ConsoleTest.cpp  meson.build
